get farms by user id

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,3 @@
-server:
-  port: 8081
 spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/farm-registry-db
-    username: admin
-    password: admin
+  profiles:
+    active: local
