backend endpoints created

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -5,3 +5,6 @@ spring:
     url: jdbc:postgresql://localhost:5432/farm-registry-db
     username: admin
     password: admin
+  jpa:
+    show-sql: true
+
